# ququ

./: .envrc  .gitignore  download_models.py  firered_asr_server.py  funasr_model.py  funasr_server.py  glm_asr_server.py  main.js  package.json  preload.js  pyproject.toml  ququ-ctl  setup_firered_asr.py  setup_funasr_2512.py  shell.nix
docs/: glm-asr-integration.md  optimization-research.md
src/: App.jsx  indicator.html  settings.jsx  vite.config.js
src/helpers/: asrManagerFactory.js  clipboard.js  fireRedAsrManager.js  funasrManager.js  glmAsrManager.js  ipcHandlers.js  tray.js  windowContextManager.js  windowManager.js
src/hooks/: useRecording.js
