[project]
name = "ququ"
version = "0.1.0"
description = "开源免费的语音转文字应用，支持 FunASR 和 GLM-ASR-Nano"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # 核心依赖
    "numpy<2",
    "librosa>=0.11.0",

    # PyTorch - 使用较新版本以支持 GLM-ASR
    # 注意：需要根据 CUDA 版本选择合适的 PyTorch
    # 参考：https://pytorch.org/get-started/locally/
    "torch>=2.1.0",
    "torchaudio>=2.1.0",

    # FunASR 语音识别
    "funasr>=1.2.7",

    # GLM-ASR 语音识别
    # 注意：GLM-ASR-Nano-2512 要求 transformers==4.51.3
    # 新版 transformers 移除了 WhisperFlashAttention2 类，会导致加载失败
    "transformers==4.51.3",
]

[tool.uv]
# 如果需要 CUDA 支持，可以指定 PyTorch 源
# extra-index-url = ["https://download.pytorch.org/whl/cu121"]
